z-index fix and mobile menu fix

--- a/assets/less/cart-product.less
+++ b/assets/less/cart-product.less
@@ -19,6 +19,7 @@
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
+		padding-right: 20px;
 	}
 	&__dimensions{
 		font-weight: 500;
