--- a/assets/less/site-header.less
+++ b/assets/less/site-header.less
@@ -40,10 +40,12 @@
 		width: 100%;
 		height: 84px;
 		position: relative;
-		z-index: 20;
+		z-index: 22;
 	}
 	&__container-wrapper {
 		background: @header-color;
+		position: relative;
+		z-index: 22;
 	}
 	&__container {
 		position: relative;
